--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -4,11 +4,11 @@
     <th>Shortened URL</th>
   </tr>
 
-<%  @urls.each do |url| %>
+<% @urls.each do |url| %>
   <tr>
   <td> <a href = <%= url.long_url %> ><%= url.long_url %></a></td>
-  <td> <a href = <%= url.short_url %> ><%= url.short_url %></a> </td>
-  <td> <% link_to 'Show' , url_path(url) %>
+  <td> <a href = "/<%= url.short_url %>" ><%= url.short_url %></a> </td>
+  <td> <% link_to 'Show', url_path(url) %></td>
   </tr>
 <% end %>
 </table>
