Defined new and create methods in urls_controller.rb file

--- a/app/views/urls/_form.html.erb
+++ b/app/views/urls/_form.html.erb
@@ -10,3 +10,5 @@
     <%= f.submit "Shorten URL!" %>
   </p>
     <% end %>
+
+<!-- Here we are using the form helper form_for so that we can bind this form to our Url model. It is also best practice to use form_for if your form takes in values that are attributes of an Active Record object. -->
