Updated create action in urls_controller.rb file

--- a/app/views/urls/new.html.erb
+++ b/app/views/urls/new.html.erb
@@ -4,4 +4,6 @@
 
 <!-- Note that because _form.html.erb is a partial, we can use the render method to display the form as part of new.html.erb. -->
 
-<%= link_to 'Shorten a URL!', new_url_path %> 
+<%= link_to 'Shorten a URL!', new_url_path %>
+
+<!-- Add a link that brings us to the form -->
